--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,10 +1,10 @@
-.App-header {
-  background-color: #282c34;
+.App {
+  background-image: linear-gradient(90deg,#9e9d95 0%, #798074 47.7%, rgba(49, 59, 49, 0.79) 100%);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /*align-items: center;*/
+ /* justify-content: center;*/
+ /* font-size: calc(10px + 2vmin);*/
   color: white;
 }
