--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,10 +1,16 @@
 .App {
-  background-image: linear-gradient(90deg,#9e9d95 0%, #798074 47.7%, rgba(49, 59, 49, 0.79) 100%);
-  min-height: 100vh;
+    display: flex;
+    flex-direction:row;
+}
+.App-header{
+  background-image: linear-gradient(135deg,#9e9d95 0%, #798074 47.7%, rgba(49, 59, 49, 0.79) 100%);
+  width:80vw;
+}
+.backphoto{
+  width: 720px; 
+  height: 100vh ;
+  background-size: cover;
+  object-position: 20% 10px;
   display: flex;
-  flex-direction: column;
-  /*align-items: center;*/
- /* justify-content: center;*/
- /* font-size: calc(10px + 2vmin);*/
-  color: white;
+  
 }
