cards added ui improved

--- a/app/src/Components/Card/Card.css
+++ b/app/src/Components/Card/Card.css
@@ -1,55 +1,3 @@
-.outerCard{
-    display: flex;
-    align-items:center;
-    justify-content: center;
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    z-index: 1;
-}
-.Card{
-    background-image:  linear-gradient(#dbeee9 0%, #e9e9e9 100%);
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    justify-content: center;
-
-}
-.logintext{
-    font-family: Raleway;
-    font-weight: 600;
-    font-size: 48px;
-    text-align: left;
-    color: #5d8980;
-}
-.entertext{
-    font-family: Raleway;
-    font-weight: normal;
-    font-size: 22px;
-    letter-spacing: 0.04em;
-    text-align: left;
-    color: #6accb8;
-
-}
-.field{
-    width: 480px;
-    height: 70px;
-    border-radius: 4px;
-    background: #c4e6dd;
-    opacity: 0.96;
-
-}
-
-.forgottext{
-    font-family: Raleway;
-    font-weight: normal;
-    font-size: 14px;
-    align-self: flex-end;
-    color: #43917b;
-
-}
-.or{
-    display: flex;
-    flex-direction: row;
+.each-card{
+    display: inline-block;
 }
